--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <title>Ekansh's OS Tasks</title>
 </head>
 <body>
-<input value="1" type="checkbox"> Start the Computer
-<input type="checkbox"> Save, Open and Delete a Text Document
-<input type="checkbox"> Calculate 40400.6 + 10 X 5
-<input type="checkbox"> Change the Background
-<input type="checkbox"> Download a Software
-<input type="checkbox"> Explore the OS Yourself
-<button onclick="revealnext()">I explored</button>
-<input id="to_reveal" style="display:none" type="checkbox">Shutdown the Computer</input>
+<input value="1" type="checkbox"> Start the Computer<br>
+<input type="checkbox"> Save, Open and Delete a Text Document<br>
+<input type="checkbox"> Calculate 40400.6 + 10 X 5<br>
+<input type="checkbox"> Change the Background<br>
+<input type="checkbox"> Download a Software<br>
+<input type="checkbox"> Explore the OS Yourself<br><br>
+<button onclick="revealnext()">I explored</button><br><br>
+<span id="to_reveal" style="display:none"><input type="checkbox">Shutdown the Computer</input></span>
 <script>
 function revealnext(){
   document.getElementById("to_reveal").style.display = "block"
