--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Ekansh's OS Tasks</title>
 </head>
 <body>
-<input value="true" type="checkbox"> Start the Computer<br>
+<input type="checkbox" checked> Start the Computer<br>
 <input type="checkbox"> Save, Open and Delete a Text Document<br>
 <input type="checkbox"> Calculate 40400.6 + 10 X 5<br>
 <input type="checkbox"> Change the Background<br>
